--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "golhar.cocomo.zinger_app"
+        applicationId "golhar.cocomo.zinger"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
