--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name=".CollegeList"></activity>
         <activity android:name=".RecyclerViewDemoActivity" />
         <activity android:name=".Registration" />
-        <activity android:name=".otp_Verification" />
+        <activity android:name=".OtpVerification" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
