api added to college list user and college service added to main service still todo filter login api and otp integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
