--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".OrderHistoryActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".CollegeListActivity" />
         <activity android:name=".RecyclerViewDemoActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".OtpVerificationActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".OrderHistoryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
