--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".OrderHistoryActivity"></activity>
+        <activity android:name=".ShopListActivity"></activity>
+        <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".CollegeListActivity" />
         <activity android:name=".RecyclerViewDemoActivity" />
         <activity android:name=".RegistrationActivity" />
