rate food dialog box partially done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
     implementation 'com.google.firebase:firebase-auth:19.3.0'
 
