--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ShopItemList"></activity>
+        <activity android:name=".OnBoardingActivity" />
         <activity android:name=".ShopListActivity" />
         <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".CollegeListActivity" />
