shop item recycle view and api integration done overall search i.e. shop and item combined search done used the api item filter changes made in itemservice class as there was no Call statement NOTE: glide is disabled as there is no url in server

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="golhar.cocomo.zinger">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ShopItemListActivity"></activity>
+        <activity android:name=".SearchItemShopActivity"></activity>
+        <activity android:name=".ShopMenuItemListActivity" />
         <activity android:name=".OnBoardingActivity" />
         <activity android:name=".ShopListActivity" />
         <activity android:name=".OrderHistoryActivity" />
