Update user profile completely done with api integration todo cart activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".SearchItemShopActivity"></activity>
+        <activity android:name=".UpdateUserProfileActivity"></activity>
+        <activity android:name=".SearchItemShopActivity" />
         <activity android:name=".ShopMenuItemListActivity" />
         <activity android:name=".OnBoardingActivity" />
         <activity android:name=".ShopListActivity" />
@@ -22,10 +23,11 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".OtpVerificationActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".OrderHistoryItemDetailActivity"/>
+        <activity android:name=".OrderHistoryItemDetailActivity" />
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
