--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".UpdateUserProfileActivity"></activity>
+        <activity android:name=".ShopListActivity"></activity>
+        <activity android:name=".UpdateUserProfileActivity" />
         <activity android:name=".SearchItemShopActivity" />
         <activity android:name=".ShopMenuItemListActivity" />
         <activity android:name=".OnBoardingActivity" />
-        <activity android:name=".ShopListActivity" />
+        <activity android:name=".SellerActivity" />
         <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".CollegeListActivity" />
         <activity android:name=".RecyclerViewDemoActivity" />
