--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="golhar.cocomo.zinger">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,8 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".UpdateUserProfileActivity"></activity>
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:theme">
+        <activity android:name=".CartActivity"/>
+        <activity android:name=".UpdateUserProfileActivity" />
         <activity android:name=".SearchItemShopActivity" />
         <activity android:name=".ShopMenuItemListActivity" />
         <activity android:name=".OnBoardingActivity" />
